--- a/Plague/south_infect_parishes_opt.Rmd
+++ b/Plague/south_infect_parishes_opt.Rmd
@@ -45,6 +45,7 @@ parish_names <- InfectedSouthScania$ParishName
 patchPop <- InfectedSouthScania$BEF1699
 cum_deaths <- InfectedSouthScania$VictimsNumber
 maxDays <- maxDays(InfectedSouthScania, "EndDaysPlague") 
+InfectedSouthScania$BeginDaysPlague
 ```
 
 ```{r}
@@ -79,16 +80,8 @@ transitions <- c(
 compartments <- c("S", "E", "I", "R", "D")
 parameters <- c("beta", "mu")
 colnames(u0) <- compartments
-
 # EMatrix (#compartments x #events). For each column vector j we put 1 if the compartment
 # participated in the event j, otherwise zero.
-E <- matrix(
-  c(0, 1, 1, 0, 0),
-  nrow = 5,
-  ncol = 1,
-  dimnames = list(c("S", "E", "I", "R", "D"),
-                  c("event1"))
-)
 ```
 
 
@@ -102,6 +95,8 @@ colnames(grav_matrix) <- parish_names
 
 
 ```{r}
+ E <- matrix(c(0, 1, 1, 0, 0), nrow = 5, ncol = 1,
+  dimnames = list(c("S", "E", "I", "R", "D"), c("event1")))
 # Create an external transfer event to move exposed or infected individuals
 # from node i to other nodes starting seven days after the initial plague in the node i until maxDays and every seven days with a proportion given by the respective gravitational term.
 
@@ -150,31 +145,30 @@ date <- InfectedSouthScania$BeginPlaguePeriod[1] # Initial
 date
   
   # Getting the number of infected parishes per month from the data
-  cum_infected_parishes_by_month <- count_infected_by_month(InfectedSouthScania,date,0)
+  cum_infected_parishes_by_month <- count_infected_parishes_month(InfectedSouthScania,date,0)
   
 ```
 
 ```{r}
 # Function to calculate the error in the cumulative number of infected parishes per month
 objectiveFunction_2 <- function(parameters, gdf, n) {
-  model_SEIRD <- mparse(transitions = transitions,
+ model_SEIRD <- mparse(transitions = transitions,
                         compartments = compartments,
                         gdata = c(sigma = 0.17 , gamma = 0.4),
                         ldata = parameters,
                         u0 = u0,
                         tspan = 1:maxDays
-                        # ,
-                        # events = events,
-                        # E = E
+                        , events = events
+                        , E = E
   )
   result <- run(model = model_SEIRD)
   traj_D <- trajectory(model = result, compartments = "D")
   
   # Defining the initial date of the gdf to start counting the number of infected parishes per month
-  date <- InfectedSouthScania$BeginPlaguePeriod[1] # Initial
+  date <- gdf$BeginPlaguePeriod[1] # Initial
   
   # Getting the number of infected parishes per month from the data
-  cum_infected_parishes_by_month <- count_infected_by_month(gdf,date,n)
+  cum_infected_parishes_by_month <- count_infected_parishes_month(gdf,date,n)
   
   # Initializing the number of infected parishes per month for the model's output
   infected_parishes <- rep(0, length(cum_infected_parishes_by_month))
@@ -273,6 +267,6 @@ res <- mbo(fun = objectiveFunction_2_mlr, design = des, control = control, show.
 best_params <- res$x
 
 # Plot the cumulative number of parishes per month using the model estimation
-plot_cum_infect_parishes_model(df_best_params, InfectedSouthScania,0)
+plot_cum_infected_parishes_model(df_best_params, InfectedSouthScania,0)
 
 ```
