--- a/Plague/yellow_group.Rmd
+++ b/Plague/yellow_group.Rmd
@@ -31,9 +31,9 @@ library(reticulate)
 path_project_plague <- "/Users/dianapli/Desktop/PythonMathematicalModeling/docs/PlagueProject"
 ```
 
-```{r load functions}
-source_python(paste0(path_project_plague, "/funct_process_data.py"))
-```
+# ```{r load functions}
+# source_python(paste0(path_project_plague, "/funct_process_data.py"))
+# ```
 
 ```{r load data}
 YSTAD_group <- read_csv("/Users/dianapli/Desktop/PythonMathematicalModeling/docs/PlagueProject/data/private/yellow_group.csv", col_types = cols())
@@ -77,58 +77,14 @@ transitions <- c(
 compartments <- c("S", "E", "I", "R", "D")
 parameters <- c("beta", "mu")
 colnames(u0) <- compartments
-
-# EMatrix (#compartments x #events). For each column vector j we put 1 if the compartment
-# participated in the event j, otherwise zero.
-E <- matrix(
-  c(0, 1, 1, 0, 0),
-  nrow = 5,
-  ncol = 1,
-  dimnames = list(c("S", "E", "I", "R", "D"),
-                  c("event1"))
-)
 ```
 
 
 ```{r}
 grav_matrix <- read_csv("/Users/dianapli/Desktop/PythonMathematicalModeling/docs/PlagueProject/data/private/matrix_yellow_group.csv", col_types = cols())
-
 # Assign column names
 colnames(grav_matrix) <- parish_names
 ```
-
-```{r}
-# Create an external transfer event to move exposed or infected individuals
-# from node 1 (Ystad) to other nodes starting seven days after the initial plague
-# period in Ystad and every seven days until proportional to the gravity term
-
-data_init_node <- subset(YSTAD_group, ParishName == "YSTAD")
-initial_time <- data_init_node$BeginDaysPlague[1]
-
-# Initialize an empty list
-list_of_events2 <- list()
-for(i in 2:npatches){
-infect_event2 <-
-  lapply(seq(from = initial_time + 7, to = maxDays, by = 7),
-         function(t) {
-               data.frame(
-               event = "extTrans",
-               time = t,
-               node = 1,
-               dest = i,
-               n = 0,
-               proportion = grav_matrix$YSTAD[i],
-               select = 1,
-               shift = 0
-             )
-            })
-# Append the events to list_of_events2
-# list_of_events2 is a list of lists of dataframes
-list_of_events2[[i]] <- infect_event2
-}
-events <- do.call(rbind, unlist(list_of_events2, recursive = FALSE))
-```
-
 
 ```{r}
 # call a file in R to use some functions
@@ -139,7 +95,41 @@ plot_parishes_month(YSTAD_group, 'JUN 1712', 0)
 
 ```{r}
 # Function to calculate the error in the cumulative number of infected parishes per month
-objectiveFunction_2 <- function(parameters, gdf, n) {
+objectiveFunction_2 <- function(parameters, gdf, grav_matrix, n) {
+  # EMatrix (#compartments x #events). For each vector column j we put 1 if the compartment
+  # participated in the event j, otherwise zero.
+  E <- matrix(c(0, 1, 1, 0, 0), nrow = 5, ncol = 1,
+  dimnames = list(c("S", "E", "I", "R", "D"), c("event1")))
+  
+  # Create an external transfer event to move exposed or infected individuals
+  # from node 1 (Ystad) to other nodes starting seven days after the initial plague
+  # period in Ystad and every seven days until proportional to the gravity term
+
+  data_init_node <- subset(gdf, ParishName == "YSTAD")
+  initial_time <- data_init_node$BeginDaysPlague[1]
+
+  # Initialize an empty list
+  list_of_events2 <- list()
+  for(i in 2:npatches){
+  infect_event2 <-
+    lapply(seq(from = initial_time + 7, to = maxDays, by = 7),
+         function(t) {
+               data.frame(
+               event = "extTrans",
+               time = t,
+               node = 1,
+               dest = i,
+               n = 0,
+               proportion = p*grav_matrix$YSTAD[i],
+               select = 1,
+               shift = 0
+             )
+            })
+  # Append the events to list_of_events2
+  # list_of_events2 is a list of lists of dataframes
+  list_of_events2[[i]] <- infect_event2
+  }
+  events <- do.call(rbind, unlist(list_of_events2, recursive = FALSE))
   
   model_SEIRD <- mparse(transitions = transitions,
                         compartments = compartments,
@@ -202,7 +192,7 @@ objectiveFunction_2 <- function(parameters, gdf, n) {
 
 ```{r}
 
-ncopies<-50
+ncopies<-100
 
 ps<- makeParamSet(
   makeNumericVectorParam("beta", len=npatches, lower = 0, upper = 1),
@@ -238,14 +228,16 @@ objectiveFunction_2_mlr <- makeSingleObjectiveFunction(
     beta_mu <- cbind(beta, mu)
     colnames(beta_mu) <- c("beta", "mu")
     return (objectiveFunction_2(parameters = beta_mu
-                                , gdf = YSTAD_group, n = 0))},
+                                , gdf = YSTAD_group
+                                , grav_matrix = grav_matrix
+                                , n = 0))},
   par.set = ps,
   minimize = TRUE
 )
 
 
 control = makeMBOControl()
-control = setMBOControlTermination(control, iters = 50)
+control = setMBOControlTermination(control,  time.budget = 60*60, target.fun.value = 0.001)
 control = setMBOControlInfill(control, crit = makeMBOInfillCritEI())  # Not sure if this is the default, or something Avelda added.
 
 des$y = apply(des,1,objectiveFunction_2_mlr)
@@ -258,13 +250,18 @@ res <- mbo(fun = objectiveFunction_2_mlr, design = des, control = control, show.
 # Extract the best parameters
 best_params <- res$x
 best_solution <- res$y
+best_solution
 ```
+
 
 ```{r}
 # Create a data frame with the best parameters
 df_best_params <- as.data.frame(best_params)
+df_best_params
+```
 
-# Solving the model with the best parameters
+```{r}
+
 model_SEIRD <- mparse(transitions = transitions,
                       compartments = compartments,
                       gdata = c(sigma = 0.17 , gamma = 0.4),
@@ -276,8 +273,17 @@ model_SEIRD <- mparse(transitions = transitions,
 )
 set.seed(123)
 set_num_threads(1)
-result <- run(model = model_SEIRD)
-plot(result)
+
+# Cumulative deaths
+traj_D <- trajectory(model = result, compartments = "D")
+# Plot a specific trajectory
+ggplot(traj_D) + geom_line(aes(x = time, y = D, color = factor(node)))
+
+# Infected
+traj_I <- trajectory(model = result, compartments = "I")
+# Plot a specific trajectory
+ggplot(traj_I) + geom_line(aes(x = time, y = I, color = factor(node)))
+
 ```
 
 ```{r}
@@ -287,7 +293,3 @@ input <- run_infected_parishes_model(best_params, YSTAD_group, 0)
 plot_infected_parishes(input, YSTAD_group, 0)
 ```
 
-```{r}
-source("Number_Infected_Parishes.R")
-#plot_experiment(3,best_params, YSTAD_group, 0)
-```
